Fix picture links in ui kit file

--- a/app/views/static_pages/ui_kit.html.erb
+++ b/app/views/static_pages/ui_kit.html.erb
@@ -211,7 +211,7 @@
     <div>
       <!-- landing page cards -->
       <div class="card card-custom shadow mb-5 text-center max-width-18">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class="card-img-top" alt="...">
+        <%= image_tag("talent_default.jpg", alt: "...", class: "card-img-top") %>
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <a href="#">Go somewhere</a>
@@ -229,7 +229,7 @@
       <div class="card card-custom2 shadow mb-5 max-width-45">
         <div class="row no-gutters">
           <div class="col-md-3">
-            <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class=" img card-img p-4" alt="...">
+            <%= image_tag("talent_default.jpg", alt: "...", class: " img card-img p-4") %>
           </div>
           <div class="col-md-6">
             <div class="card-body">
@@ -250,7 +250,7 @@
       <div class="card card-custom2 shadow mb-5 max-width-45">
         <div class="row no-gutters">
           <div class="col-md-3">
-            <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class=" img card-img p-4" alt="...">
+            <%= image_tag("talent_default.jpg", alt: "...", class: " img card-img p-4") %>
           </div>
           <div class="col-md-6">
             <div class="card-body">
@@ -271,7 +271,7 @@
       <div class="card card-custom2 shadow mb-5 max-width-45">
         <div class="row no-gutters">
           <div class="col-md-3">
-            <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class=" img card-img p-4" alt="...">
+            <%= image_tag("talent_default.jpg", alt: "...", class: " img card-img p-4") %>
           </div>
           <div class="col-md-6">
             <div class="card-body">
@@ -292,7 +292,7 @@
       <div class="card card-custom2 shadow mb-5 max-width-45">
         <div class="row no-gutters">
           <div class="col-md-3">
-            <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class=" img card-img p-4" alt="...">
+            <%= image_tag("talent_default.jpg", alt: "...", class: " img card-img p-4") %>
           </div>
           <div class="col-md-6">
             <div class="card-body">
@@ -353,10 +353,10 @@
         <div class="card card-custom3 shadow">
           <div class="row">
             <div class="col">
-              <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class=" img card-img p-4" alt="...">
+              <%= image_tag("talent_default.jpg", alt: "...", class: " img card-img p-4") %>
             </div>
             <div class="col">
-              <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class=" img card-img p-4" alt="...">
+              <%= image_tag("talent_default.jpg", alt: "...", class: " img card-img p-4") %>
             </div>
           </div>
         </div>
@@ -522,7 +522,7 @@
         <div class="col-sm-8">
           <!-- image container -->
           <div class="image-container ">
-            <img src="https://www.lamodeenimages.com/sites/default/files-lmi/images/article/homepage/full/lexposition-hommage-a-azzedine-alaia-cover.jpg" class=".img-fluid card-img">
+            <%= image_tag("talent_default.jpg", alt: "...", class: ".img-fluid card-img") %>
           </div>
         </div>
         <div class="col-sm-4">
