--- a/app/views/static_pages/ui_kit.html.erb
+++ b/app/views/static_pages/ui_kit.html.erb
@@ -374,7 +374,7 @@
             <footer class="card-blockquote">Footer<cite title="Source title">Source title</cite></footer>
           </blockquote>
           </div>
-        </div>>
+        </div>
       </div>
 
     <!-- Jumbotron --->
