--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render 'layouts/navbar' %>
 
     <!-- USER MESSAGES -->
-    <% if current_page?(root_path) %>
+    <% if current_page?(root_path) || current_page?(admins_categories_path) || current_page?(admins_talents_path) || current_page?(admin_path) %>
       <%= render 'layouts/messages' %>
     <% else %>
       <div class="container">
