fix bug + rearrange items

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,60 +5,76 @@
     <div class="row">
 
       <div class="col-4">
-        <h6>Liens pratiques du site</h6>
+        <h6><strong>Découvrir</strong></h6>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <%= link_to "   Accueil", home_path %>
+            <%= link_to "Accueil", home_path %>
           </li>
         </ul>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <%= link_to "   Explorer", talents_path %>
+            <%= link_to "Explorer", talents_path %>
           </li>
         </ul>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <%= link_to "   A propos / L'équipe", about_path %>
+            <%= link_to "A propos", about_path %>
           </li>
         </ul>
       </div>
 
+
+
       <div class="col-4">
-        <h6>Visualiser</h6>
+        <h6><strong>Enrichir</strong></h6>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <%= link_to "   Mes informations", user_path(current_user.id) %>
+            <%= link_to "Proposer une activité", new_talent_path %>
           </li>
         </ul>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <%= link_to "   Mon profil apprenti", apprentice_show_user_path(current_user.id) %>
-          </li>
-        </ul>
-         <ul class="nav flex-column">
-          <li class="nav-item">
-            <%= link_to "   Mon profil mentor", mentor_show_user_path(current_user.id) %>
+            <%= link_to "Nous contacter", contact_path %>
           </li>
         </ul>
       </div>
 
+
       <div class="col-4">
-        <h6>Proposer / Modifier</h6>
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <%= link_to "   Proposer une activité", new_talent_path %>
-          </li>
-        </ul>
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <%= link_to "   Modifier mon profil", edit_user_registration_path(current_user.id) %>
-          </li>
-        </ul>
-         <ul class="nav flex-column">
-          <li class="nav-item">
-            <%= link_to "   Nous contacter", contact_path %>
-          </li>
-        </ul>
+        <h6><strong>Utilisateur</strong></h6>
+        <% if user_signed_in? %>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <%= link_to "Mes informations", user_path(current_user.id) %>
+            </li>
+          </ul>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <%= link_to "Modifier mon profil", edit_user_registration_path(current_user.id) %>
+            </li>
+          </ul>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <%= link_to "Mon profil apprenti", apprentice_show_user_path(current_user.id) %>
+            </li>
+          </ul>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <%= link_to "Mon profil mentor", mentor_show_user_path(current_user.id) %>
+            </li>
+          </ul>
+        <% else %>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <%= link_to "Inscription", new_user_registration_path %>
+            </li>
+          </ul>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <%= link_to "Connexion", new_user_session_path %>
+            </li>
+          </ul>
+        <% end %>
       </div>
     </div>
   </div>
