--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
  <nav class="navbar navbar-expand-lg navbar-primary sticky-top bg-primary">
     <!-- LOGO -->
     <a class="navbar-brand" href="<%=root_path%>">
-      <i class="fab fa-slideshare fa-2x mr-1 text-white"></i>
+      <i class="fas fa-link fa-2x mr-1 text-white"></i>
       <a class="navbar-brand" href="<%=root_path%>">Talent Connect</a>
     </a>
 
@@ -106,7 +106,6 @@
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle btn btn-outline-light " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag(current_user.avatar, class: "avatar-img rounded-circle max-width-1") %>
               Mon espace
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
