display duration fixed on talent show

--- a/app/views/talents/_show_talent.html.erb
+++ b/app/views/talents/_show_talent.html.erb
@@ -95,15 +95,15 @@
             </td>
           </tr>
           <tr>
-            <th scope="col">Ville : </th>
+            <th scope="col">Ville :</th>
             <td><%= @talent.place.city_name %></td>
           </tr>
           <tr>
-            <th scope="col">Prix : </th>
+            <th scope="col">Prix :</th>
             <td><%= @converted_price %> €</td>
           </tr>
           <tr>
-            <th scope="col">Durée de la scéance : </th>
+            <th scope="col">Durée (séance) :</th>
             <td><%= @converted_duration %></td>
           </tr>
         </tbody>
