--- a/app/views/static_pages/ui_kit.html.erb
+++ b/app/views/static_pages/ui_kit.html.erb
@@ -374,7 +374,7 @@
             <footer class="card-blockquote">Footer<cite title="Source title">Source title</cite></footer>
           </blockquote>
           </div>
-        </div>>
+        </div>
       </div>
 
     <!-- Jumbotron --->
@@ -415,7 +415,7 @@
     </div>
 
 
-    <p>Custom search bar , 3 input
+    <p>Custom search bar , 3 input</p>
     
     <div>
       <%= form_tag search_results_path, method: 'get' do %>
