--- a/app/views/admins/talents/edit.html.erb
+++ b/app/views/admins/talents/edit.html.erb
@@ -1,5 +1,5 @@
 <script defer
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCI3Q_EMl4fqy5IsGdqAFzhlWJb9QOcAYI&libraries=places&callback=initAutocomplete">
+          src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_AUTOCOMPLETE_KEY'] %>&libraries=places&callback=initAutocomplete">
 </script>
 <div class="container mt-4">
   <div class=" card card-custom2 shadow max-width-45 p-4 m-auto">
