--- a/app/views/talents/_edit_talent_form.html.erb
+++ b/app/views/talents/_edit_talent_form.html.erb
@@ -1,6 +1,6 @@
 <!-- GMAP -->
 <script defer
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCI3Q_EMl4fqy5IsGdqAFzhlWJb9QOcAYI&libraries=places&callback=initAutocomplete">
+          src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_AUTOCOMPLETE_KEY'] %>&libraries=places&callback=initAutocomplete">
 </script>
 <!-- CONTENT -->
 <div class="container">
